<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_project"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_project" />
        <item
            android:id="@+id/nav_create_project"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_create_project" />
        <item
            android:id="@+id/nav_join_project"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_join_project" />
    </group>

    <item android:title="@string/menu_quickmenu">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/menu_settings" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/menu_logout" />
        </menu>
    </item>

</menu>
