<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_projects"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_project" />
        <item android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_notifications_active_white_24dp"
            android:title="@string/menu_notifications" />
    </group>

    <item android:title="@string/menu_events">
        <menu>
            <item android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_white_24dp"
                android:title="@string/menu_settings" />
        </menu>
    </item>
</menu>