<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.projectmanager.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_project"
        android:name="com.example.projectmanager.ui.Project.ProjectFragment"
        android:label="@string/menu_project"
        tools:layout="@layout/project_fragment" />

    <fragment
        android:id="@+id/nav_chat"
        android:name="com.example.projectmanager.ui.Chat.ChatFragment"
        android:label="@string/menu_chat"
        tools:layout="@layout/chat_fragment" />

    <fragment
        android:id="@+id/nav_create_issue"
        android:name="com.example.projectmanager.ui.Issue.CreateIssueFragment"
        android:label="@string/menu_create_issue"
        tools:layout="@layout/create_issue_fragment" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.projectmanager.ui.Settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/settings_fragment" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.example.projectmanager.ui.Logout.LogoutFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/logout_fragment" />
</navigation>