<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.issue.CreateIssueFragment">

    <data>
        <variable
            name="viewModel"
            type="com.example.projectmanager.ui.issue.CreateIssueViewModel" />
    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F6F9FF">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="vertical"
            android:background="@drawable/form_round"
            android:elevation="2dp"
            android:layout_margin="@dimen/standard_12">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/issue_hint_title"/>

            <EditText
                android:id="@+id/issueTitleInput"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPersonName"
                android:text="@={viewModel.title}"
                android:textSize="20sp"
                android:autofillHints="title"
                android:layout_marginTop="@dimen/standard_12"
                android:layout_marginBottom="@dimen/standard_12"
                tools:ignore="LabelFor" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/issue_hint_description"/>

            <EditText
                android:id="@+id/issueDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:gravity="top"
                android:lines="5"
                android:scrollbars="vertical"
                android:singleLine="false"
                android:text="@={viewModel.description}"
                android:textSize="20sp"
                android:layout_marginTop="@dimen/standard_12"
                android:layout_marginBottom="@dimen/standard_12"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/issue_update_label"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text="@={viewModel.label}"
                android:layout_marginTop="@dimen/standard_12"
                android:layout_marginBottom="@dimen/standard_12"
                android:autofillHints="label"
                tools:ignore="LabelFor" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/issue_update_priority" />

            <Spinner
                android:id="@+id/priorityDropdown"
                android:layout_width="match_parent"
                android:layout_height="@dimen/standard_23"
                android:layout_marginTop="@dimen/standard_12"
                android:layout_marginBottom="@dimen/standard_12"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/issue_update_assigned_user"/>

            <Spinner
                android:id="@+id/assignToUserDropdown"
                android:layout_width="match_parent"
                android:layout_height="@dimen/standard_23"
                android:layout_marginTop="@dimen/standard_12"
                android:layout_marginBottom="@dimen/standard_12"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/issue_update_department"/>

            <Spinner
                android:id="@+id/departmentDropdown"
                android:layout_width="match_parent"
                android:layout_height="@dimen/standard_23"
                android:layout_marginTop="@dimen/standard_12"
                android:layout_marginBottom="@dimen/standard_12"/>

            <Button
                android:id="@+id/updateIssueButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_button"
                android:backgroundTint="@color/colorPrimary"
                android:backgroundTintMode="multiply"
                android:onClick="@{viewModel::onCreateIssue}"
                android:text="@string/issue_update_update"/>

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </ScrollView>

</layout>