<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00BCD4"
        tools:context=".ui.CreateProject.CreateProjectFragment">

        <EditText
            android:id="@+id/projectTitleInput"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="50dp"
            android:background="#FFFFFF"
            android:ems="10"
            android:fontFamily="sans-serif"
            android:hint="@string/project_hint_title"
            android:inputType="textPersonName"
            android:textSize="20sp"
            android:paddingLeft="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/projectDescriptionInput"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="50dp"
            android:background="#FFFFFF"
            android:ems="10"
            android:fontFamily="sans-serif"
            android:gravity="top"
            android:hint="@string/project_hint_description"
            android:inputType="textMultiLine"
            android:singleLine="false"
            android:textSize="20sp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:scrollbars="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/projectTitleInput" />

        <RadioButton
            android:id="@+id/requirePasswordButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="50dp"
            android:button="@android:drawable/checkbox_off_background"
            android:text="@string/project_password_requirement"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="18sp"
            android:paddingLeft="10dip"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/projectDescriptionInput" />

        <Button
            android:id="@+id/projectCreateButton"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="149dp"
            android:layout_marginEnd="50dp"
            android:fontFamily="sans-serif"
            android:text="@string/project_create_button"
            android:textAllCaps="false"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/requirePasswordButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>