<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.user_creation.UserCreationActivity">

    <data>
        <variable
            name="viewModel"
            type="com.example.projectmanager.ui.user_creation.UserCreationViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:padding="20dp"
            android:orientation="vertical"
            android:background="@drawable/form_shape">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/user_creation_title"
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <ProgressBar
                android:id="@+id/progress_bar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="false"
                android:visibility="visible" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_view"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:innerRadius="10dp"
                android:shape="ring"
                app:cardCornerRadius="75dp"
                app:strokeWidth="10dp"
                app:strokeColor="@android:color/background_dark"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp">

                <ImageView
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_add_photo" />

            </com.google.android.material.card.MaterialCardView>

            <View
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:background="?android:attr/listDivider" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/user_creation_hint"
                    android:text="@={viewModel.displayName}"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_button"
                android:backgroundTint="@color/colorPrimary"
                android:backgroundTintMode="multiply"
                android:text="@string/user_creation_save"
                android:onClick="@{() -> viewModel.save()}"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button"
            android:backgroundTint="#cccccc"
            android:backgroundTintMode="multiply"

            android:text="@string/user_creation_skip"
            android:onClick="@{() -> viewModel.skip()}" />

        </LinearLayout>

    </ScrollView>

</layout>